i fix the form size and i add a window icon

--- a/CalculHeritage/Form1.resx
+++ b/CalculHeritage/Form1.resx
@@ -3305,4 +3305,99 @@
         ZAsAAEBuki0AAAC5SbYAAABk1nX/Az8WbD23FgKWAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFxddIRcXYiIXF2IiFxdiIhcX
+        YiIXF10hAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABsbYIUaGl9rGRldRxoa
+        X0YaGl9rGRlhhAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGxthTBsb
+        YV8bG2FfGxtfSwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAZGV9mGRlfZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABGhphZBkZYGUZGWBlGhpfYwAA
+        AAEAAAAAGRlfZhkZX2YAAAAAAAAAARoaYWQZGWBlGRlgZRoaX2MAAAABGhpfRhoaX0YXF2IiFxdiIhkZ
+        YEgbG19DAAAAABkZX2YZGV9mAAAAABoaX0YaGl9GFxdiIhcXYiIZGWBIGxtfQxkZax8ZGWA9GRlfMxkZ
+        XzMZGWA9GRlrHwAAAAAZGV9mGRlfZgAAAAAZGWsfGRlgPRkZXzMZGV8zGRlgPRkZax8AAAAAHR1fIwAA
+        AAAAAAAAHR1fIwAAAAAAAAAAGRlfZhkZX2YAAAAAAAAAAB0dXyMAAAAAAAAAAB0dXyMAAAAAAAAAABcX
+        YiIVFWoMFRVqDBcXYiIAAAAAAAAAABkZX2YZGV9mAAAAAAAAAAAXF2IiFRVqDBUVagwXF2IiAAAAAAAA
+        AAAAAAABHBxeGxwcXhsAAAABAAAAAAAAAAAZGV9mGRlfZgAAAAAAAAAAAAAAARwcXhscHF4bAAAAAQAA
+        AAAAAAAAAAAAACEhYx8cHGMkAAAAAAAAAAAAAAABGxtghRsbYYQAAAABAAAAAAAAAAAcHGAlIiJeHgAA
+        AAAAAAAAAAAAAAAAAAAkJG0HGxtgYBoaYGoZGWFnGhpgbRsbYYQbG2CCGhpgbRkZYWcaGmBqGxtgYCQk
+        bQcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaGmBaGhpgWgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHBxVCSAgYAgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD//wAA+98AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//
+        AAD//wAA/n8AAP5/AAD//wAA//8AAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAABkZX1MbG2BVGxtgVRsbYFUbG2BVGxtgVRsbYFUbG2BVGxtgVRsbYFUbG2BVGRlgUgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAGhpg2BoaYHUZGV9mGRlfZhkZX2YZGV9mGRlfZhkZX2YZGV9mGRlfZhoa
+        YHUaGmDXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbG19LGhpgyBoaX7scHGAtGhpgdxoaYjwaGl87Ghpgdxwc
+        Xi4aGl+7GhpgyBwcYEoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGxtgVRoaYakXF2MsGhpmFBoa
+        ZhQXF2MsGhpgqhkZX1MAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGRlfUxoa
+        X6YZGWCYGRlgmBoaX6YZGWBSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAGRlfMxkZYJgZGWCYGRlfMwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAZGV8zGRlgmBkZYJgZGV8zAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYGF5JGhpgfxoaYIgaGmCIGhpgfxkZ
+        YEgAAAAAAAAAAAAAAAAAAAAAAAAAABkZXzMZGWCYGRlgmBkZXzMAAAAAAAAAAAAAAAAAAAAAAAAAABgY
+        XkkaGmB/GhpgiBoaYIgaGmB/GRlgSAAAAAAAAAAAAAAAAAAAAAAAAIACGhpgsBkZYJccHGBAGRlfMxkZ
+        XzMcHGBAGRlgmBoaYa4AAIACAAAAAAAAAAAAAAAAGRlfMxkZYJgZGWCYGRlfMwAAAAAAAAAAAAAAAAAA
+        gAIaGmCwGRlglxwcYEAZGV8zGRlfMxwcYEAZGWCYGhphrgAAgAIAAAAAAAAAABkZX2YaGl9+AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAGhpggBoaYWQAAAAAAAAAAAAAAAAZGV8zGRlgmBkZYJgZGV8zAAAAAAAA
+        AAAAAAAAGRlfZhoaX34AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaGmCAGhphZAAAAAAAAAAAGhpgqBoa
+        YGobG2BVGxtgVRsbYFUbG2BVGxtgVRsbYFUaGmFsGhpfpgAAAAAAAAAAAAAAABkZXzMZGWCYGRlgmBkZ
+        XzMAAAAAAAAAAAAAAAAaGmCoGhpgahsbYFUbG2BVGxtgVRsbYFUbG2BVGxtgVRoaYWwaGl+mAAAAAAAA
+        AAAbG2BVGhpfaxkZX2YZGV9mGRlfZhkZX2YZGV9mGRlfZhoaX2sbG15UAAAAAAAAAAAAAAAAGRlfMxkZ
+        YJgZGWCYGRlfMwAAAAAAAAAAAAAAABsbYFUaGl9rGRlfZhkZX2YZGV9mGRlfZhkZX2YZGV9mGhpfaxsb
+        XlQAAAAAAAAAABkZYjQaGmE6AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGhphOhkZYjQAAAAAAAAAAAAA
+        AAAZGV8zGRlgmBkZYJgZGV8zAAAAAAAAAAAAAAAAGRliNBoaYToAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAaGmE6GRliNAAAAAAAAAAAAAAAABoaX24gIGAIAAAAAAAAAAAAAAAAAAAAACAgYAgaGmBtAAAAAAAA
+        AAAAAAAAAAAAABkZXzMZGWCYGRlgmBkZXzMAAAAAAAAAAAAAAAAAAAAAGhpfbiAgYAgAAAAAAAAAAAAA
+        AAAAAAAAICBgCBoaYG0AAAAAAAAAAAAAAAAAAAAAFRVqDBwcYxIAAAAAAAAAAAAAAAAAAAAAHBxjEhUV
+        agwAAAAAAAAAAAAAAAAAAAAAGRlfMxkZYJgZGWCYGRlfMwAAAAAAAAAAAAAAAAAAAAAVFWoMHBxjEgAA
+        AAAAAAAAAAAAAAAAAAAcHGMSFRVqDAAAAAAAAAAAAAAAAAAAAAAAAIACGhpgagAAAAAAAAAAAAAAAAAA
+        AAAaGmBqAACAAgAAAAAAAAAAAAAAAAAAAAAZGV8zGRlgmBkZYJgZGV8zAAAAAAAAAAAAAAAAAAAAAAAA
+        gAIaGmBqAAAAAAAAAAAAAAAAAAAAABoaYGoAAIACAAAAAAAAAAAAAAAAAAAAAAAAAAAZGWI0GxteQQAA
+        AAAAAAAAGxthQhkZXzMAAAAAAAAAAAAAAAAAAAAAAAAAABkZXzMZGWCYGRlgmBkZXzMAAAAAAAAAAAAA
+        AAAAAAAAAAAAABkZYjQbG15BAAAAAAAAAAAbG2FCGRlfMwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        gAQXF10hAAAAAAAAAAAXF10hAACABAAAAAAAAAAAAAAAAAAAAAAAAAAAGRlfMxkZYJgZGWCYGRlfMwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAACABBcXXSEAAAAAAAAAABcXXSEAAIAEAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAABoaYFgXF10LFxddCxoaYFgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZGV8zGRlgmBkZ
+        YJgZGV8zAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGhpgWBcXXQsXF10LGhpgWAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAABoaYXQaGmF0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACMj
+        XRYaGmHlGhpg5SMjXRYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGhphdBoaYXQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGxtlJhwcYEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAFUDGhpgnRoaX4kYGGGLGhpfmwAAVQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcHGBAGxtlJgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaGl4eGxtfoxoaYMcaGmB/HBxgShgY
+        YDUZGWBSGRlfjhoaYc4ZGWDCGRlfhBkZYIUZGV/BGhphzhkZX44ZGV5RGBhgNRwcYEoaGmCAGhpgyBsb
+        X6MaGl4eAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEhJbDhoa
+        YFgaGl9+GhpgiBkZYHoZGWFHKytVBisrVQYaGl/BGhpfwSsrVQYrK1UGGRlhRxsbX3saGmCIGhpffhoa
+        YVcUFGINAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHx9cGRoaYLcaGmC4FRVgGAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGhpfuxoaYLkAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYGGEqGRldKQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//////////////////////3/v//+fn///73////D////5////+
+        f//5/n+fzz588/++f/u/3nv9//5////+f////n////5////+f////n////5////+f////n////w///zw
+        Dj//3nv///5////+f///////////////////////
+</value>
+  </data>
 </root>
